--- a/Missions_to_Mars/templates/index.html
+++ b/Missions_to_Mars/templates/index.html
@@ -24,6 +24,26 @@
     </div>
   </div>
 
+    <div class = "container">
+      <h2>Mars Featured Image</h2>
+      <h5>{{mars_image.title}}</h5>
+      <h7>{{mars_image.paragraph}}</h7>
+    <div>
+  </div>
+
+  <div class = "container">
+    <h2>Mars Facts</h2>
+    <h5>{{mars_facts.title}}</h5>
+    <h7>{{mars_facts.paragraph}}</h7>
+  <div>
+</div>
+
+<div class = "container">
+  <h2>Mars Hemispheres</h2>
+  <h5>{{hemi.title}}</h5>
+  <h7>{{hemi.paragraph}}</h7>
+<div>
+</div>
 
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
